--- a/rel/ch4.tex
+++ b/rel/ch4.tex
@@ -58,7 +58,7 @@ Si utilizza un potenziale centrale con buca profonda $-V_0$, del tipo mostrato i
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.7\textwidth]{image0}
-  \caption{$\psi(t_0)$}
+  \caption{$\psi(t_0)=\mathcal{N}(\mu_x,\,\mu_y,\,\sigma^2)$}
 \label{fig:image0}
 \end{figure}
 
@@ -116,6 +116,8 @@ Per grandi valori di $|V_0|$ il pacchetto d'onda non riesce ad attraversare l'os
 \label{fig:bound}
 \end{figure}
 
+Come si nota in fig.\ref{fig:images_dt} la differenza fra simulazioni con diversi $dt$ è minima. Per tempi di simulazione non troppo grandi, all'aumentare del parametro $dt$ corrisponde una variazione equivalente ad un piccolo sfasamento temporale nelle soluzioni calcolate.
+
 \begin{figure}[H]
  \begin{subfigure}[b]{0.5\textwidth}
   \centering
@@ -147,7 +149,4 @@ Per grandi valori di $|V_0|$ il pacchetto d'onda non riesce ad attraversare l'os
 
  \caption{Soluzioni numeriche per differenti valori del parametro $dt$}\label{fig:images_dt}
 \end{figure}
-
-Come si nota in fig.\ref{fig:images_dt} la differenza fra simulazioni con diversi $dt$ è minima. Per tempi di simulazione non troppo grandi, all'aumentare del parametro $dt$ corrisponde una variazione equivalente ad un piccolo sfasamento temporale nelle soluzioni calcolate.
-
 
