--- a/rel/ch3.tex
+++ b/rel/ch3.tex
@@ -131,4 +131,4 @@ Di seguito sono raffigurate le traiettorie nello spazio delle fasi $(x,y)$ dell'
 \label{fig:ode4}
 \end{figure}
 
-Quello che si nota è che il sistema presenta in tutti e quattro i casi un ciclo limite. Aumentando di poco l'intensità della forzante aumentano anche le dimensioni di tale curva. Quando però $b$ diviene troppo grande, come nel terzo e quarto caso (fig.\ref{fig:ode3}, \ref{fig:ode4}), il ciclo limite assume una topologia totalmente differente.
+Quello che si nota è che il sistema presenta in tutti e quattro i casi un ciclo limite. Aumentando di poco l'intensità della forzante aumentano anche le dimensioni di tale curva. Quando però $b$ diviene troppo grande, come nel terzo e quarto caso (fig.\ref{fig:ode3}, \ref{fig:ode4}), il ciclo limite assume una topologia totalmente differente dai casi precedenti.
